fixed hero scrollbars

--- a/src/components/flow/FlowSwiperHero/styles.module.scss
+++ b/src/components/flow/FlowSwiperHero/styles.module.scss
@@ -136,7 +136,7 @@ img.preview {
   border-radius: $radius;
   pointer-events: all;
   touch-action: auto;
-  margin: 0 -15px -10px 0;
+  margin: 0 -10px -10px 0;
 
   .button {
     cursor: pointer;
